# bts-airline-data-platform

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
analytics/dbt/bts_airline/: README.md  dbt_project.yml
analytics/dbt/bts_airline/models/mart/: mart_airport_bottlenecks.sql  mart_airport_detail.sql  mart_delay_by_carrier.sql  mart_delay_root_causes.sql  mart_flights_by_carrier.sql  mart_route_performance.sql  schema.yml
analytics/dbt/bts_airline/models/staging/: schema.yml  sources.yml  stg_carrier_report.sql
analytics/streamlit/: app.py  requirements.txt
docker/: docker-compose.yaml
docker/airflow/: Dockerfile
docker/spark/: Dockerfile
docker/streamlit/: Dockerfile
docs/: data_desc_eng.md  data_desc_tr.md  project_phases.md  tr_README.md
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ingestion/: config.py
ingestion/dags/: bts_processing_dag.py
ingestion/elt/: upload_to_gcs.py
ingestion/etl/: extract.py  load_raw.py
processing/: config.py  spark_transform.py
